[package]
name = "grove"
version = "0.1.0"
edition = "2021"
description = "The self-evolving skill tree for AI agents"

[[bin]]
name = "grove"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
sha2 = "0.10"
walkdir = "2"
